--- a/client/src/components/Login/style.css
+++ b/client/src/components/Login/style.css
@@ -4,3 +4,15 @@ body {
     background-attachment: fixed;
     background-size: cover;
 }
+
+#login-container {
+    margin-top:8%;
+    width:500px;
+    height:500px;
+    background-color:lightgrey;
+
+}
+
+#log-in-button {
+    margin-top:20px;
+}
