Set the background image for the Login and Home components

--- a/client/src/components/Login/style.css
+++ b/client/src/components/Login/style.css
@@ -1,3 +1,7 @@
+body {
+    background-image: url('../../images/gray_sand.png');
+}
+
 .navbar {
     background-color:rgb(70, 81, 95) !important;
     border-bottom:5px solid orangered;
