--- a/client/src/components/Login/style.css
+++ b/client/src/components/Login/style.css
@@ -3,8 +3,8 @@ body {
 }
 
 .navbar {
-    background-color:rgb(70, 81, 95) !important;
-    border-bottom:5px solid orangered;
+    background-color:black !important;
+    border-bottom:5px solid whitesmoke;
 }
 
 .the-aux {
@@ -17,13 +17,14 @@ body {
 
 #log-in-button {
     color:whitesmoke;
+    background-color:rgb(11, 194, 90);
     display: block;
     margin:0 auto;
     text-transform:uppercase;
     font-size:30px;
     font-weight:bold;
     margin-top:12%;
-    border:2px solid orangered;
+    border:4px solid grey;
     border-radius:32px;
   
 }
