Current user is diplayed on successful login

--- a/client/src/components/Login/style.css
+++ b/client/src/components/Login/style.css
@@ -4,7 +4,7 @@ body {
 
 .navbar {
     background-color:black !important;
-    border-bottom:5px solid whitesmoke;
+    border-bottom:5px solid rgb(34, 231, 60);
 }
 
 .the-aux {
