--- a/client/src/components/Home/style.css
+++ b/client/src/components/Home/style.css
@@ -1,3 +1,14 @@
 body {
     background-image: url('../../images/gray_sand.png');
 }
+
+
+h1 {
+    font-weight: bold;
+   
+}
+
+#display-header {
+    background-color:lightgray;
+    
+}
