--- a/client/src/components/Home/style.css
+++ b/client/src/components/Home/style.css
@@ -11,9 +11,42 @@ h1 {
     text-decoration:underline;
 }
 
-#display-header {
-    background-color:lightgray;
-    
+#player {
+    margin-top:21%;
 }
 
+#display-name {
+    color:whitesmoke;
+    border:2px solid black;
+    border-radius:30px;
+    margin-top:2%;
+    margin-left:20%;
+    margin-right:20%;
+    box-shadow:5px 10px black;
+    background-color:rgb(11, 194, 90);
+}
+
+#email {
+    color:whitesmoke;
+    border:2px solid black;
+    border-radius:30px;
+    margin-top:2%;
+    margin-left:20%;
+    margin-right:20%;
+    box-shadow:5px 10px black;
+    background-color:rgb(11, 194, 90);
+}
+
+.fixed-bottom {
+    border-top:3px solid rgb(11, 194, 90);
+    border-bottom:none;
+}
+
+.copyright {
+    color:whitesmoke;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-left:37%;
+ 
+}
 
