--- a/client/src/components/Home/style.css
+++ b/client/src/components/Home/style.css
@@ -4,6 +4,7 @@ body {
 
 h1 {
     font-weight: bold;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    
 }
 
@@ -12,7 +13,7 @@ h1 {
 }
 
 #player {
-    margin-top:22%;
+    margin-top:51px;
 }
 
 #display-name {
@@ -37,6 +38,15 @@ h1 {
     background-color:rgb(11, 194, 90);
 }
 
+#image-div {
+    margin-top:50px;
+}
+
+img {
+    width:200px;
+    height:200px;
+}
+
 .fixed-bottom {
     border-top:3px solid rgb(11, 194, 90);
     border-bottom:none;
@@ -47,6 +57,7 @@ h1 {
     text-transform: uppercase;
     font-weight: bold;
     margin-left:41%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  
 }
 
