Anchor tag linking to Spotify Web Player embedded in the Spotify image in Home.js

--- a/client/src/components/Home/style.css
+++ b/client/src/components/Home/style.css
@@ -47,6 +47,10 @@ img {
     height:200px;
 }
 
+img:hover {
+    opacity:.5;
+}
+
 .fixed-bottom {
     border-top:3px solid rgb(11, 194, 90);
     border-bottom:none;
