--- a/client/src/components/Home/style.css
+++ b/client/src/components/Home/style.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 #player {
-    margin-top:51px;
+    margin-top:206px;
 }
 
 #display-name {
@@ -38,18 +38,30 @@ h1 {
     background-color:rgb(11, 194, 90);
 }
 
-#image-div {
-    margin-top:50px;
+#log-out-button {
+    color:whitesmoke;
+    background-color:rgb(11, 194, 90);
+    display: block;
+    margin:0 auto;
+    font-size:30px;
+    font-weight:bold;
+    margin-top:2%;
+    border:4px solid grey;
+    border-radius:32px;
 }
 
-img {
-    width:200px;
-    height:200px;
-}
+/* #image-div {
+    margin-top:10px;
+} */
 
-img:hover {
+/* img {
+    width:50px;
+    height:50px;
+} */
+
+/* img:hover {
     opacity:.5;
-}
+} */
 
 .fixed-bottom {
     border-top:3px solid rgb(11, 194, 90);
@@ -63,5 +75,14 @@ img:hover {
     margin-left:41%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+#log-out-button:hover {
+    background-color:gray;
+    border-color:rgb(11, 194, 90);
 }
 
