--- a/client/src/components/Login/style.css
+++ b/client/src/components/Login/style.css
@@ -40,3 +40,87 @@ span {
 a:hover {
     text-decoration: none;
 }
+
+.copyright {
+    color:whitesmoke;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin:auto;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ 
+}
+
+/* Iphone 5 portrait mode  */
+@media only screen and (min-width : 320px) and (max-width:568px) and (orientation : portrait) {
+    .the-aux {
+        margin:auto;
+    }
+
+    #log-in-button {
+        margin-top:136px;
+        font-size:26px;
+    }
+
+    .copyright {
+        margin-left:22% !important;
+        font-size:20px;
+    }
+
+}
+ /* Iphone 5 portrait mode  */
+
+ /* Iphone 5 landscape mode */
+ @media only screen and (min-width : 320px) and (max-width:568px) and (orientation : landscape) { 
+    .the-aux {
+        margin:auto;
+    };
+
+    .copyright {
+        margin:auto !important;
+        margin-left:0% !important;
+    }
+    
+ }
+ /* Iphone 5 landscape mode */
+
+ /* Iphone 6,7,8 portrait mode */
+ @media only screen and (min-width: 375px) and (max-width : 667px) and (orientation : portrait ) {
+
+    #log-in-button {
+        margin-top:185px;
+    }
+
+    .copyright {
+        margin-left:26% !important;
+    }
+}
+/* Iphone 6,7,8 portrait mode */
+
+/* Iphone 6,7,8 landscape mode */
+@media only screen and (min-width: 375px) and (max-width : 667px) and (orientation : landscape ) {
+
+    .the-aux {
+        margin-left:38%;
+    }
+}
+/* Iphone 6,7,8 landscape mode */
+
+ /* Iphone 6/7/8 plus landscape mode */
+ @media only screen and (min-width:414px) and (max-width:736px) and (orientation : landscape) {
+
+    .the-aux {
+        margin:auto;
+    }
+ }
+/* Iphone 6/7/8 plus landscape mode */
+
+
+/* Iphone X landscape mode */
+@media only screen and (min-width: 375px) and (max-width:812px) and (orientation : landscape) {
+    .the-aux {
+        margin:auto;
+    }
+}
+/* Iphone X landscape mode */
+
+
